<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textSize="40sp"/>

    <ImageView
        android:scaleType="centerInside"
        android:id="@+id/imageViewQuiz"
        android:layout_width="200dp"
        android:layout_height="200dp"
         />

    <TextView
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="Your score will be shown here"/>

    <TextView
        android:id="@+id/textKittens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/inputAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:hint="@string/hint"/>

    <Button
        android:id="@+id/submitAns"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:text="@string/SubmitAnswer"/>

    <Button
        android:id="@+id/restartBtn"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:text="@string/restartBtn"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>